add character frame animations

--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="container">
-            <video class="child-img full-width" src="asset/home/naruto-sad-video.mp4"></video>
+            <video class="child-img full-width" src="asset/home/naruto-sad-video.mp4" muted autoplay></video>
         </div>
 
         <div class="container">
