--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="home.css">
     <script src="jquery.min.js"></script>
 </head>
 
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <script src="test.js"></script>
+    <script src="home.js"></script>
 </body>
 
 </html>
