--- a/home.html
+++ b/home.html
@@ -20,11 +20,11 @@
                 <div id="menu">
                     <img id="menu-bg" src="asset/home/navbar/hamburger-menu-bg.png" alt="">
                     <div id="menu-items">
-                        <a href="">HOME</a>
-                        <a href="">CHARACTER</a>
-                        <a href="">ANIME</a>
-                        <a href="">MANGA</a>
-                        <a href="">STORY</a>
+                        <a href="#home">HOME</a>
+                        <a href="#character">CHARACTER</a>
+                        <a href="#anime">ANIME</a>
+                        <a href="#manga">MANGA</a>
+                        <a href="#story">STORY</a>
                     </div>
                 </div>
             </div>
@@ -34,27 +34,27 @@
 
         </canvas>
 
-        <div class="container">
+        <div id="home" class="container">
             <img class="child-img full-width" style="z-index: -4; top: 0; left: 0;" src="asset/home/sky.webp" alt="">
             <img id="cloud" class="child-img" style="z-index: -3;" src="asset/home/cloud.webp" alt="">
             <img class="child-img full-width" style="z-index: -2; bottom: -40vh;"
                 src="asset/home/mountain.webp" alt="">
         </div>
 
-        <div class="container">
+        <div id="character" class="container">
             <img class="child-img full-width" src="asset/bg_story_jp-light.png" alt="">
         </div>
 
-        <div class="container">
+        <div id="anime" class="container">
             <video class="child-img full-width" src="asset/home/naruto-sad-video.mp4" muted autoplay></video>
         </div>
 
-        <div class="container">
+        <div id="manga" class="container">
             <img style="z-index: -1; top: 0; left: 0;" class="child-img full-width" src="asset/bg_comics_jp_light.png"
                 alt="">
         </div>
 
-        <div class="container">
+        <div id="story" class="container">
             <img style="z-index: -1; top: 0; left: 0;" class="child-img full-width"
                 src="asset/home/anime/background-light.png" alt="">
         </div>
