add letter animation

--- a/home.html
+++ b/home.html
@@ -37,36 +37,53 @@
         <div id="home" class="container">
             <img class="child-img full-width" style="z-index: -4; top: 0; left: 0;" src="asset/home/sky.webp" alt="">
             <img id="cloud" class="child-img" style="z-index: -3;" src="asset/home/cloud.webp" alt="">
-            <img class="child-img full-width" style="z-index: -2; bottom: -40vh;"
-                src="asset/home/mountain.webp" alt="">
+            <img class="child-img full-width" style="z-index: -2; bottom: -40vh;" src="asset/home/mountain.webp" alt="">
         </div>
 
         <div id="character" class="container">
             <img class="child-img full-width" src="asset/bg_story_jp-light.png" alt="">
+            <div class="letter-container">
+                <img src="asset/letter/letter_n.webp" alt="">
+            </div>
         </div>
 
         <div id="anime" class="container">
             <video class="child-img full-width" src="asset/home/naruto-sad-video.mp4" muted autoplay></video>
+            <div class="letter-container">
+                <img src="asset/letter/letter_a.webp" alt="">
+            </div>
         </div>
 
         <div id="manga" class="container">
             <img style="z-index: -1; top: 0; left: 0;" class="child-img full-width" src="asset/bg_comics_jp_light.png"
                 alt="">
+            <div class="letter-container">
+                <img src="asset/letter/letter_r.webp" alt="">
+            </div>
         </div>
 
         <div id="story" class="container">
             <img style="z-index: -1; top: 0; left: 0;" class="child-img full-width"
                 src="asset/home/anime/background-light.png" alt="">
+            <div class="letter-container">
+                <img src="asset/letter/letter_u.webp" alt="">
+            </div>
         </div>
 
         <div class="container">
             <img style="z-index: -1; top: 0; left: 0;" class="child-img full-width"
                 src="asset/home/manga/background-light.png" alt="">
+            <div class="letter-container">
+                <img src="asset/letter/letter_t.webp" alt="">
+            </div>
         </div>
 
         <div class="container">
             <img style="z-index: -1; top: 0; left: 0;" class="child-img full-width" src="asset/character/background.jpg"
                 alt="">
+            <div class="letter-container">
+                <img src="asset/letter/letter_o.webp" alt="">
+            </div>
         </div>
     </div>
 
